feat: refatoração do gerenciamento de sessão e melhorias na autenticação
- Removido o uso do token diretamente do objeto de sessão, agora a autenticação é gerenciada através de um estado interno.
- Atualizado o fluxo de verificação de sessão nas páginas de acesso negado e login.
- Implementadas novas funções para manipulação de tokens de acesso e sessões.
- Adicionadas migrações para corrigir drift no esquema de banco de dados, incluindo a criação de tabelas e índices necessários.
- Criados testes para validar as migrações e garantir a integridade do esquema.